--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+pycharm/teste/.ideia/*
 # Generated files
 .idea/**/contentModel.xml
 
